--- a/view/latestnews.html
+++ b/view/latestnews.html
@@ -7,7 +7,7 @@
 								</a>
 								<div class="m-l-lg">
 								  <div class="m-b-xs">
-									<a href="" class="h4">小鱼儿</a>
+									<a ng-href="" class="h4">小鱼儿</a>
 									<span class="text-muted m-l-sm pull-right">
 									  现在
 									</span>
@@ -16,14 +16,14 @@
 									<div>不哭不闹不炫耀，安安分分一起老。不骂不吵不张扬，安安分分一起过。就算逃到天涯海角，也决不回头。就算哭到世界灭亡，也决不后悔。我想依靠你 永远在我旁边带路。我想牵着你 永远只会为你带路。偶尔有点小任性，为了等待你安抚。偶尔有点小情绪，为了引起你注意。所有的一切、都不是什么誓言。所谓的一切、到头来都是欺骗。
 								蓦然、心锁的钥匙新了不实用了。蓦然、心锁的钥匙旧了可以换了。</div>
 									<div class="m-t-sm">
-									  <a href="" class="text-muted m-xs"><i class="icon-action-redo"></i></a>
-									  <a href="" class="text-muted m-xs"><i class="icon-star"></i></a>
-									  <a href="" class="text-muted m-xs"><i class="icon-refresh"></i> 13</a>
+									  <a ng-href="" class="text-muted m-xs"><i class="icon-action-redo"></i></a>
+									  <a ng-href="" class="text-muted m-xs"><i class="icon-star"></i></a>
+									  <a ng-href="" class="text-muted m-xs"><i class="icon-refresh"></i> 13</a>
 									</div>
 								  </div>
 								</div>
 							  </div>
-							  .comment-reply
+							  <!-- .comment-reply -->
 							  <div class="m-l-lg">
 								<a class="pull-left thumb-sm avatar">
 								  <img src="images/a5.jpg" alt="...">
@@ -34,12 +34,12 @@
 									<span class="text-muted m-l-sm pull-right">
 									  10m ago
 									</span>
-									<a href="">大张李</a>
+									<a ng-href="">大张李</a>
 									希望你能每天都快乐                         
 								  </div>
 								</div>
 							  </div>
-							  / .comment-reply
+							  <!-- / .comment-reply -->
 							  <div>
 								<a class="pull-left thumb-sm avatar m-l-n-md">
 								  <img src="images/a3.jpg" alt="...">
@@ -47,7 +47,7 @@
 								<div class="m-l-lg m-b-lg panel b-a bg-light lt">
 								  <div class="panel-heading pos-rlt b-light">
 									<span class="arrow arrow-light left"></span>                    
-									<a href="">我是黄小明</a>
+									<a ng-href="">我是黄小明</a>
 									<span class="text-muted m-l-sm pull-right">
 									  1h ago
 									</span>
@@ -63,7 +63,7 @@
 								</a>
 								<div class="m-l-lg m-b-lg">
 								  <div class="m-b-xs">
-									<a href="" class="h4">帕金森</a>
+									<a ng-href="" class="h4">帕金森</a>
 									<span class="text-muted m-l-sm pull-right">
 									  3h ago
 									</span>
@@ -74,9 +74,9 @@
 									</div>
 									<img src="images/c5.jpg" class="b b-a wrapper-xs bg-white img-responsive">
 									<div class="m-t-sm">
-									  <a href="" class="text-muted m-xs"><i class="icon-action-redo"></i></a>
-									  <a href="" class="text-muted m-xs"><i class="icon-star"></i></a>
-									  <a href="" class="text-muted m-xs"><i class="icon-refresh"></i> 13</a>
+									  <a ng-href="" class="text-muted m-xs"><i class="icon-action-redo"></i></a>
+									  <a ng-href="" class="text-muted m-xs"><i class="icon-star"></i></a>
+									  <a ng-href="" class="text-muted m-xs"><i class="icon-refresh"></i> 13</a>
 									</div>
 								  </div>
 								</div>
@@ -87,7 +87,7 @@
 								</a>
 								<div class="m-l-lg m-b-lg">
 								  <div class="m-b-xs">
-									<a href="" class="h4">请叫我大帅柯</a>
+									<a ng-href="" class="h4">请叫我大帅柯</a>
 									<span class="text-muted m-l-sm pull-right">
 									  4h ago
 									</span>
@@ -103,8 +103,8 @@
 									  <div class="panel-footer bg-light lter">
 										<button class="btn btn-info pull-right btn-sm">评论</button>
 										<ul class="nav nav-pills nav-sm">
-										  <li><a href=""><i class="fa fa-camera text-muted"></i></a></li>
-										  <li><a href=""><i class="fa fa-video-camera text-muted"></i></a></li>
+										  <li><a ng-href=""><i class="fa fa-camera text-muted"></i></a></li>
+										  <li><a ng-href=""><i class="fa fa-video-camera text-muted"></i></a></li>
 										</ul>
 									  </div>
 									</div>
@@ -118,7 +118,7 @@
 								<div class="m-l-lg panel b-a">
 								  <div class="panel-heading pos-rlt b-b b-light">
 									<span class="arrow left"></span>
-									<a href="">月亮的影子</a>
+									<a ng-href="">月亮的影子</a>
 									<label class="label bg-light m-l-xs">VIP</label> 
 									<span class="text-muted m-l-sm pull-right">
 									  9h ago
