实现用户名和用户头像的双向数据绑定

--- a/view/latestnews.html
+++ b/view/latestnews.html
@@ -1,4 +1,4 @@
-<div class="m_bottom">
+<div class="m_bottom" ng-controller="UserInfoController">
 						<div class="padder">      
 							<div class="streamline b-l b-info m-l-lg m-b padder-v">
 							  <div>
